[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/person_votes.gd" type="Script" id=1]
[ext_resource path="res://scenes/votes_container.tscn" type="PackedScene" id=2]

[node name="PersonVotes" type="PanelContainer"]
margin_right = 441.0
margin_bottom = 239.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 446.0
margin_bottom = 232.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 433.0
margin_bottom = 219.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 427.0
margin_bottom = 31.0

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
margin_top = 8.0
margin_right = 96.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Person's Name"

[node name="PenaltyLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
margin_left = 100.0
margin_right = 349.0
margin_bottom = 31.0
text = "Penalidade:
(0 = nenhuma, 6 = penalidade m√°xima)"
align = 2

[node name="PenaltySpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/Header"]
margin_left = 353.0
margin_right = 427.0
margin_bottom = 31.0
max_value = 6.0

[node name="VotesContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 35.0
margin_right = 427.0
margin_bottom = 51.0
